<resources>
    <string name="app_name">kiosk</string>
    <string name="admin_text">관리자 메뉴</string>
    <string name="admin_button1_text">판매 현황</string>
    <string name="admin_button2_text">메뉴 관리</string>
    <string name="back_button_text">뒤로</string>
    <string name="menu_management_text">메뉴 관리</string>
    <string name="patty_text">패티</string>
    <string name="vegetable_text">채소</string>
    <string name="source_text">소스</string>
    <string name="bulgogi_patty">불고기패티</string>
    <string name="pickle">피클</string>
    <string name="honey_mustard">허니 머스타드</string>
    <string name="payment_number">원</string>
    <string name="payment_amount">결제금액</string>
    <string name="line">line</string>
    <string name="payment_image">payment_image</string>
    <string name="payment_text">IC 카드를 투입구에 넣어주세요.</string>
    <string name="payment_warning">30초 내로 삽입이 안될 경우 결제가 취소됩니다!!!</string>
    <string name="cancel">취소</string>
    <string name="payment_approval">승인 요청 중입니다. 잠시만 기다려주세요.</string>
    <string name="payment_approval_warning">결제가 끝날 때까지 카드를 뽑지 말아주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receipt_text">영수증을 받아가 주세요.</string>
    <string name="order_number">주문번호 :&#160;</string>
    <string name="payment_success">결제가 완료되었습니다.\n이용해 주셔서 감사합니다.</string>
    <string name="payment_close">결제완료 화면은 잠시후 자동으로 닫힙니다.</string>
    <string name="receipt">receipt</string>
</resources>