<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/menu_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_management_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/patty_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/patty_text"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/menu_management" />

    <Button
        android:id="@+id/vegetable_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/vegetable_text"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/patty_button" />

    <Button
        android:id="@+id/source_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/source_text"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/vegetable_button" />

    <Button
        android:id="@+id/menu_management_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back_button_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>