<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/admin_button1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/admin_button1_text"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/admin" />

    <Button
        android:id="@+id/admin_button2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/admin_button2_text"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/admin_button1" />

    <Button
        android:id="@+id/admin_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back_button_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>