<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AfterPaymentFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/receipt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number"
        android:textSize="40sp"
        android:textColor="@color/red_900"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receipt_text"/>

    <ImageView
        android:id="@+id/receipt_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/receipt_resize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_number"
        app:layout_constraintBottom_toTopOf="@id/payment_success"
        android:contentDescription="@string/receipt" />

    <TextView
        android:id="@+id/payment_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/payment_success"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/payment_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_close"
        android:textColor="@color/red_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
/>


</androidx.constraintlayout.widget.ConstraintLayout>