<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/payment_approval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_approval"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/payment_approval_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line"
        app:layout_constraintTop_toBottomOf="@+id/payment_approval"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_approval_warning"
        android:textColor="@color/red_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_approval_line"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>