<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/payment_amount"
        android:fontFamily="@font/cafe24ssurround"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cafe24ssurround"
        android:text="0"
        android:textColor="@color/red_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/payment_number_end"
        app:layout_constraintStart_toEndOf="@id/payment_amount"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="10dp"
        android:gravity="end"/>

    <TextView
        android:id="@+id/payment_number_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/payment_number"
        android:textColor="@color/red_700"
        android:fontFamily="@font/cafe24ssurround"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/payment_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/line"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/payment_amount"
        android:contentDescription="@string/line" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_line" />

</androidx.constraintlayout.widget.ConstraintLayout>