<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CardPaymentFragment">

    <ImageView
        android:id="@+id/payment_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/payment_image"
        android:src="@drawable/cash_payment_resize"
        app:layout_constraintBottom_toTopOf="@+id/payment_insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_insert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cafe24ssurround"
        android:gravity="center"
        android:text="투입 금액"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_rest"
        app:layout_constraintEnd_toStartOf="@id/payment_insert_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_insert_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cafe24ssurround"
        android:gravity="center"
        android:text="원"
        android:textSize="20sp"
        android:textColor="@color/red_700"
        app:layout_constraintBottom_toTopOf="@+id/payment_rest_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/payment_insert" />

    <TextView
        android:id="@+id/payment_rest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/cafe24ssurround"
        android:gravity="center"
        android:text="남은 금액"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_text"
        app:layout_constraintEnd_toStartOf="@id/payment_rest_number"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_rest_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/cafe24ssurround"
        android:gravity="center"
        android:text="원"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/payment_rest" />

    <TextView
        android:id="@+id/payment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cafe24ssurround"
        android:gravity="center"
        android:text="현금을 투입구에 넣어주세요."
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/cafe24ssurround"
        android:gravity="center"
        android:text="@string/payment_warning"
        android:textColor="@color/red_700"
        app:layout_constraintBottom_toTopOf="@+id/payment_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/payment_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/square_button"
        android:fontFamily="@font/cafe24ssurround"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>